# library-api-rir

./: Cargo.toml  Dockerfile  sqlx-data.json
.github/workflows/: dockerpush.yml
migrations/: 20221213060546_create_master_book_table.sql
scripts/: init_db.sh
src/: db.rs  main.rs
src/routes/: book.rs  error.rs  mod.rs  server.rs
tests/: health_check.rs
