[package]
name = "library-app-rir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
tower-http = { version = "0.3.0", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.48"
tower = { version = "0.4", features = ["util"] }
thiserror = "1.0.30"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-native-tls", 
    "macros", 
    "postgres", 
    "uuid", 
    "time", 
    "migrate",
    "offline"
]

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
hyper = { version = "0.14", features = ["full"] }
